--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "sendgrid": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
