--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
     "redux-thunk": "^2.2.0",
     "sendgrid": "^5.2.3",
     "stripe": "^5.3.0"
