--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
     "react-stripe-checkout": "^2.6.3",
+    "redux-form": "^7.2.0",
     "sendgrid": "^5.2.3"
   },
   "scripts": {
