--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "localtunnel": "^1.8.3",
     "materialize-css": "^0.100.2",
     "mongoose": "^4.13.5",
     "nodemon": "^1.12.1",
