webhook configuration from sendgrid_webhook script  ;; localtunnel restart-on-crash script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
+    "webhook": "./sendgrid_webhook.sh"
   },
   "author": "",
   "license": "ISC",
