--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "localtunnel": "^1.8.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
