--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
-    "webhook": "./sendgrid_webhook.sh"
+    "webhook": "./sendgrid_webhook.sh",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --client"
   },
   "author": "",
   "license": "ISC",
