--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concurrently": "^3.6.1",
-    "cookie-session": "^2.0.0-beta.3",
+    "cookie-session": "^2.0.0-rc.1",
     "express": "^4.17.1",
     "localtunnel": "^1.9.2",
     "lodash": "^4.17.15",
     "materialize-css": "^1.0.0",
-    "mongoose": "^4.13.19",
+    "mongoose": "^4.13.20",
     "nodemon": "^1.19.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^1.0.0",
